Moving to the start of line should not place the caret outside of the table https://bugs.webkit.org/show_bug.cgi?id=70757

Reviewed by Chang Shu.

Source/WebCore:

The bug was caused by positionAvoidingFirstPositionInTable. Get rid of the function.

Test: editing/selection/table-lineboundary.html

* editing/visible_units.cpp:
(WebCore::startPositionForLine):

LayoutTests:

Added a test to move the caret to lineboundaries in the first and the last table cell.
The caret should remain inside a table cell.

* editing/selection/table-lineboundary-expected.txt: Added.
* editing/selection/table-lineboundary.html: Added.


Canonical link: https://commits.webkit.org/87064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98408 268f45cc-cd09-0410-ab3c-d52691b4dbfc